--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ awsConfig.ddb.tableName=shortUrls
 awsConfig.ddb.region=ap-south-1
 awsConfig.ddb.accessKey=dummyAccessKey
 awsConfig.ddb.secretKey=dummySecretKey
+server.port=8080
+server.address=0.0.0.0
